--- a/README
+++ b/README
@@ -3,3 +3,7 @@ This project is an assignment given to the students in Virtual Teams subject at 
 The task given to the student is to implement a gamification feature in any part of the software's lifecycle (analysis, design, development, testing, maintenance) and publish it on the Internet. It has been recommended to the students to use either WAMP or XAMP.
 
 I have chosen the analysis part, a.k.a. stakeholder requirements. Therefore, the project is about implementing gamification in the creation of requirements.
+
+It will consist in a login system for users and the possibility to add, comment, and rate requirements. Users will get points by performing these actions.
+
+As a personal choice, I'm using Code Igniter for the development of the project.
